# Nutrieye

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/models/: flex_message.py  nutrition.py
app/routes/: line_callball_route.py
app/utils/: utils.py
terraform/environment/production/artifact_registry/: .terraform.lock.hcl  providers.tf  registry.tf  terraform.tf
terraform/environment/production/cloud_run/: .terraform.lock.hcl  nutrieye.tf  terraform.tf
terraform/environment/production/secret_manager/: secret_manager.tf  terraform.tf
terraform/modules/artifact_registry/: main.tf
terraform/modules/cloud_run/: main.tf
terraform/modules/secret_manager/: main.tf
